--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Document</title>
 </head>
 <body>
+
     <h2>web design </h2>
+
+<p>In publishing and graphic design, Lorem ipsum is a
+     placeholder text commonly used to demonstrate the visual 
+     form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a 
+     before the final copy is available</p>
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
